--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,14 +128,14 @@ if(MMAI_EXECUTORCH_PATH)
     add_definitions(-DENABLE_MMAI_STRICT_LOAD=1)
   endif()
 
-  set(EXECUTORCH_ROOT "/Users/simo/Projects/executorch")
-  set(EXECUTORCH_BUILD "${EXECUTORCH_ROOT}/build")
-
   set(EXECUTORCH_BUILD_EXTENSION_FLAT_TENSOR  ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_DATA_LOADER  ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_MODULE       ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_TENSOR       ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_XNNPACK                ON CACHE BOOL "" FORCE)
+
+  set(EXECUTORCH_BUILD_TESTING                OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_ENABLE_PYBIND                OFF CACHE BOOL "" FORCE)
 
   # keep this OFF (improves performance)
   set(EXECUTORCH_OPTIMIZE_SIZE                OFF CACHE BOOL "" FORCE)
@@ -143,26 +143,19 @@ if(MMAI_EXECUTORCH_PATH)
   # XXX: This does not work (overwritten by XNNPACK based on CMAKE_BUILD_TYPE)
   set(XNN_LOG_LEVEL 2 CACHE STRING "" FORCE)
 
-  set(PYTHON_EXECUTABLE "${EXECUTORCH_ROOT}/.venv/bin/python" CACHE FILEPATH "" FORCE)
+  set(PYTHON_EXECUTABLE "${MMAI_EXECUTORCH_PATH}/.venv/bin/python" CACHE FILEPATH "" FORCE)
   message("PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}")
 
-  add_subdirectory("${EXECUTORCH_ROOT}" "${CMAKE_CURRENT_BINARY_DIR}/executorch")
-
-message(STATUS "CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
-message(STATUS "CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}")
-message(STATUS "CMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}")
-
+  add_subdirectory("${MMAI_EXECUTORCH_PATH}" "${CMAKE_CURRENT_BINARY_DIR}/executorch")
 
   list(APPEND MMAI_FILES BAI/model/TorchModel.cpp)
-
   list(APPEND MMAI_LIBS
     executorch
     xnnpack_backend
-    portable_ops_lib  # kernel-ops library that registers all ops.
+    portable_ops_lib
     extension_module_static
     extension_flat_tensor
     extension_tensor
-    # optimized_native_cpu_ops_lib
   )
 else()
   if(NOT ENABLE_ML)
