--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,33 +118,69 @@ set(MMAI_LIBS vcmi)
 set(MMAI_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/schema/gcem)
 
 if(MMAI_EXECUTORCH_PATH)
-  if(NOT EXISTS "${MMAI_EXECUTORCH_PATH}/CMakeLists.txt")
-    message(FATAL_ERROR "No CMakeLists.txt found under MMAI_EXECUTORCH_PATH: ${MMAI_EXECUTORCH_PATH}")
-  endif()
-
   add_definitions(-DUSING_EXECUTORCH=1)
 
   if (ENABLE_MMAI_STRICT_LOAD)
     add_definitions(-DENABLE_MMAI_STRICT_LOAD=1)
   endif()
 
+
+  if(NOT EXISTS "${MMAI_EXECUTORCH_PATH}/CMakeLists.txt")
+    message(FATAL_ERROR "No CMakeLists.txt found under MMAI_EXECUTORCH_PATH: ${MMAI_EXECUTORCH_PATH}")
+  endif()
+
+  set(EXECUTORCH_BUILD_XNNPACK                ON CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_PTHREADPOOL            ON CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_CPUINFO                ON CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_EXTENSION_TENSOR       ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_FLAT_TENSOR  ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_DATA_LOADER  ON CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_PORTABLE_OPS           ON CACHE BOOL "" FORCE)  # for non-delegated ops like view/reshape
+  set(EXECUTORCH_BUILD_KERNELS_OPTIMIZED      ON CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_KERNELS_QUANTIZED      ON CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_EXTENSION_MODULE       ON CACHE BOOL "" FORCE)
-  set(EXECUTORCH_BUILD_EXTENSION_TENSOR       ON CACHE BOOL "" FORCE)
-  set(EXECUTORCH_BUILD_XNNPACK                ON CACHE BOOL "" FORCE)
 
+  # ??
+
+  # TODO: test if this could speed stuff up when enabled (not for Apple Silicon though)
+  set(EXECUTORCH_XNNPACK_ENABLE_KLEIDI        OFF CACHE BOOL "" FORCE)
+
+  set(EXECUTORCH_BUILD_COREML                 OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_DEVTOOLS               OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_EXECUTOR_RUNNER        OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_EXTENSION_APPLE        OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_EXTENSION_LLM          OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_EXTENSION_TRAINING     OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_KERNELS_CUSTOM         OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_KERNELS_CUSTOM_AOT     OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_KERNELS_QUANTIZED_AOT  OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_MPS                    OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_NEURON                 OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_OPENVINO               OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_PYBIND                 OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_QNN                    OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_SIZE_TEST              OFF CACHE BOOL "" FORCE)
   set(EXECUTORCH_BUILD_TESTING                OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_TESTS                  OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_BUILD_VULKAN                 OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_COREML_BUILD_EXECUTOR_RUNNER OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_ENABLE_LOGGING               OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_ENABLE_PROGRAM_VERIFICATION  OFF CACHE BOOL "" FORCE)
   set(EXECUTORCH_ENABLE_PYBIND                OFF CACHE BOOL "" FORCE)
-
-  # keep this OFF (improves performance)
   set(EXECUTORCH_OPTIMIZE_SIZE                OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_USE_DL                       OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_XNNPACK_ENABLE_WEIGHT_CACHE  OFF CACHE BOOL "" FORCE)
+  set(EXECUTORCH_XNNPACK_SHARED_WORKSPACE     OFF CACHE BOOL "" FORCE)
 
   # XXX: This does not work (overwritten by XNNPACK based on CMAKE_BUILD_TYPE)
   set(XNN_LOG_LEVEL 2 CACHE STRING "" FORCE)
 
   set(PYTHON_EXECUTABLE "${MMAI_EXECUTORCH_PATH}/.venv/bin/python" CACHE FILEPATH "" FORCE)
   message("PYTHON_EXECUTABLE: ${PYTHON_EXECUTABLE}")
+
+  # Needed to prevent errors during executorch build with cmake v4
+  set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE STRING "" FORCE)
+  set(CMAKE_COMMAND "${MMAI_EXECUTORCH_PATH}/.venv/bin/cmake" CACHE FILEPATH "cmake v3" FORCE)
 
   add_subdirectory("${MMAI_EXECUTORCH_PATH}" "${CMAKE_CURRENT_BINARY_DIR}/executorch")
 
