--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ MMAI_EXECUTORCH_INSTALL_DIR=/some/path/excutorch/build-debug instead.
 
 set(MMAI_LIBS vcmi)
 set(MMAI_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
-set(MMAI_PRIVATE_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/schema/gcem)
+set(MMAI_THIRD_PARTY_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/schema/gcem)
 
 if(MMAI_EXECUTORCH_INSTALL_DIR)
   add_definitions(-DUSING_EXECUTORCH=1)
@@ -142,8 +142,8 @@ if(MMAI_EXECUTORCH_INSTALL_DIR)
   message(STATUS "EXECUTORCH_INCLUDE_DIRS: ${EXECUTORCH_INCLUDE_DIRS}")
   message(STATUS "EXECUTORCH_LIBRARIES: ${EXECUTORCH_LIBRARIES}")
 
-  list(APPEND MMAI_PRIVATE_INCLUDES ${EXECUTORCH_INCLUDE_DIRS})
-  list(APPEND MMAI_PRIVATE_INCLUDES "${MMAI_EXECUTORCH_SOURCE_DIR}/..")
+  list(APPEND MMAI_THIRD_PARTY_INCLUDES ${EXECUTORCH_INCLUDE_DIRS})
+  list(APPEND MMAI_THIRD_PARTY_INCLUDES "${MMAI_EXECUTORCH_SOURCE_DIR}/..")
   list(APPEND MMAI_LIBS ${EXECUTORCH_LIBRARIES})
   list(APPEND MMAI_FILES BAI/model/TorchModel.cpp)
 else()
@@ -208,7 +208,9 @@ force_link_static(MMAI "${MMAI_EXECUTORCH_INSTALL_DIR}/lib"
 target_link_libraries(MMAI PUBLIC ${MMAI_LIBS})
 set_target_properties(MMAI PROPERTIES COMPILE_DEFINITIONS "MMAI_DLL=1")
 target_include_directories(MMAI PUBLIC ${MMAI_INCLUDES})
-target_include_directories(MMAI PRIVATE ${MMAI_PRIVATE_INCLUDES})
+
+# Mark as SYSTEM to prevent -Werror failing builds due to warnings from these
+target_include_directories(MMAI SYSTEM PRIVATE ${MMAI_THIRD_PARTY_INCLUDES})
 
 if(ENABLE_MMAI_TEST)
   include(GoogleTest)
